# ml-exp

./: .gitignore  CHANGELOG.md  README.md  classification_ml_experiment.py  example_onnx_models.py  example_temporal_fraud_comparison.py  exp_pipeline_service.py  pyproject.toml  relatorio_final.html  report_accuracy.json  report_f1.json  report_precision.json  report_recall.json  roteiro.md  scores.json  script-test.py  test_classification_ml_experiment.py  test_exp_pipeline_service.py
better_experimentation/: __init__.py  better_experimentation.py  test_classification_ml_experiment.py  test_exp_pipeline_service.py
better_experimentation/controller/: console.py
better_experimentation/model/: ab_test_results.py  ml_model.py  report.py
better_experimentation/repository/: ab_test_repository.py  (+5 more)
docs/: Aplicando_Testes.md  Aplicar_Experimentao_Continua_Avaliacao_Modelo.MD  Ferramentas_Existentes.md  class_diagram.plantuml  experimental_pipeline.plantuml
local_tests/: classification_ml_experiment.py  example_onnx_models.py  exp_pipeline_service.py
ml_continuous_test/: __init__.py  ab_test_repository.py  better_experimentation.py  experiment_pipeline_service.py  ml_continuous_profile.py  ml_experiments.py  mlflow_experiments.py  report_builder.py  test_classification_ml_experiment.py  test_exp_pipeline_service.py
ml_exp/: __init__.py  ml_exp.py
tests/: test_ab_pipeline_repository.py  test_ab_pipeline_service.py  test_hypo_pipeline_repository.py  test_pandas_data_file_repository.py  test_sklearn_model_repository.py  test_statistical_pipeline_service.py
(+94 files in other folders)
